--- a/plugins/AdminBasic/tpl/css/AdminBasic.css
+++ b/plugins/AdminBasic/tpl/css/AdminBasic.css
@@ -18,6 +18,7 @@
     background: #BBB;
 }
 #admin_tabs li a {    
+    font-size: 0.8em;
     background: #CACBCF;
     border: 1px solid #BBB;
     border-bottom-width: 0;
@@ -45,6 +46,7 @@
     position:relative;
     padding-top: 5px;
     padding-left: 2px;
+    font-size:0.9em;
 }
 #admin_content h1 {
     font-size: 20px;
