--- a/plugins/SimpleFrontend/tpl/css/basic-mobile.css
+++ b/plugins/SimpleFrontend/tpl/css/basic-mobile.css
@@ -21,6 +21,9 @@
     .bodysize {
         min-height: 300px;
     }
+    .col1, .col2, .col3 {
+        width:96%;
+    }    
 }
 @media only screen and (max-width: 640px) {
     #header-menu li:not(:first-child) {
