remove time utils class for simplify

--- a/plugins/Multilang/tpl/css/Multilang.css
+++ b/plugins/Multilang/tpl/css/Multilang.css
@@ -1,8 +1,7 @@
 /*
- Copyright @ 2016 Diego Garcia
+ Copyright @ 2016 - 2018 Diego Garcia
 */
 #admin_ml_content {}
-
 #iso_code {
     width:25px;
 }
