--- a/plugins/NewsMediaUploader/tpl/css/NewsMediaUploader.css
+++ b/plugins/NewsMediaUploader/tpl/css/NewsMediaUploader.css
@@ -30,13 +30,14 @@
 }
 #photobanner {
     width:100%;
-    height: 105px;
-    padding:15px 0;
+    height: 25vh;
+    padding:5px 0;
     text-align:center;
     background-color:#efefef;
     border:2px solid #fff;
     outline:1px solid #ddd;
     overflow: scroll;
+    resize:vertical;
 }
 .warn_disable {
     color: #cc0000;
