--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -293,7 +293,7 @@ h1,h2,h3,h4,h5,h6{
     padding-left: 8px;
 }
 .cols h2 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Georgia';
     float:left;
     width: 98.5%;
     color:#000;
