--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -341,3 +341,9 @@ h1,h2,h3,h4,h5,h6{
     font-weight: bold;
     background-color: #55a0db;
 }
+.db_querys, .page_render, .memory_usage {
+    font-size: 0.7em;
+    text-align:center;
+    padding: 0;
+    margin: 0;
+}
