--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -594,3 +594,14 @@
 .section_newsbox:visited {
     background-color: red;
 }
+pre {
+    color: #fff;
+    background-color: #000;
+    padding: 4px;
+    border: 1px solid gray;
+    box-shadow: 0 0 4px 2px #000;
+    border-radius: 5px;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    text-align: justify;
+}
