--- a/plugins/StdComments/tpl/css/StdComments.css
+++ b/plugins/StdComments/tpl/css/StdComments.css
@@ -63,3 +63,20 @@
     height: 200px;
 }
 #btnSendNewComment { margin-left:50%; }
+#comm_adm_buttons {
+    margin: 3px;
+}
+.adm_btn_on_comm {
+    background-color: red !important;
+}
+#comm_adm_buttons input {
+    float:right;
+    border: 2px inset #9e9e9e;
+    color: #E3E3E3;
+    padding: 4px;
+    font-size: 0.8em;
+    text-decoration: none;
+    background-color: #232323;
+    margin-right: 1px;
+    border-radius: 3px;    
+}
