change incorrect placement css

--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -610,7 +610,7 @@ pre {
     word-wrap: break-word;
     white-space: pre-wrap;
     text-align: justify;
-    line-height:0.7;
+    line-height:1;
 }
 ul {
     list-style-type: square;
@@ -632,4 +632,21 @@ ul {
 }
 .vVoid {
     background-position: 2px -40px !important;
+}
+
+blockquote {
+    display: block;
+    background: #fff;
+    padding: 15px 20px 15px 45px;
+    margin: 0 0 20px;
+    position: relative;
+    font-family: Georgia, serif;
+    font-size: 12px;
+    line-height: 1.2;
+    color: #666;
+    text-align: justify;
+    border-left: 15px solid #c76c0c;
+    border-right: 2px solid #c76c0c;
+    box-shadow: 2px 2px 15px #ccc;
+    width: 75%;
 }
