--- a/plugins/MiniEditor/tpl/css/MiniEditor-mobile.css
+++ b/plugins/MiniEditor/tpl/css/MiniEditor-mobile.css
@@ -1,4 +1,8 @@
-/*
- Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)
-*/
-
+/**
+ *  MiniEditor css mobile
+ * 
+ *  @author diego@envigo.net
+ *  @package ProjectBase
+ *  @subpackage MiniEditor
+ *  @copyright Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)  
+ */
