--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -650,3 +650,16 @@ blockquote {
     box-shadow: 2px 2px 15px #ccc;
     width: 75%;
 }
+code {
+    display: block;
+    white-space: pre-wrap;
+    font-family: Courier, 'New Courier', monospace;
+    font-size: 0.9em;
+    background-color: #000000;
+    color: green;
+    border-radius: 5px;
+    padding-bottom: 5px;
+    padding-left: 8px;
+    margin: 1em 0;
+}
+
