--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -662,4 +662,31 @@ code {
     padding-left: 8px;
     margin: 1em 0;
 }
-
+#scrollup, #scrolldown {
+    position: fixed;
+    background: rgb(0, 0, 0);    
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    border-radius: 35px;
+    display: none; 
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;  
+    z-index: 100;
+}
+#scrollup {    
+    top: 60%;
+    right: 20px;
+    display: none;
+    background: rgba(0, 0, 0, 0.7) url('/plugins/News/tpl/img/goTop.png') 50% 50% no-repeat;    
+}
+#scrolldown {
+    top:35%;
+    right: 20px;
+    display: block;
+    background: rgba(0, 0, 0, 0.7) url('/plugins/News/tpl/img/goBottom.png') 50% 50% no-repeat;     
+}
