--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -82,12 +82,12 @@
     text-decoration:none;
 }
 #adm_nav {
-    overflow: hidden;
-    clear: both;
+    overflow: hidden;    
+    float:right;
 }
 #adm_nav ul {
     padding: 0px;
-    padding-left: 5px;
+    padding-right: 5px;
     margin:0;
 }
 #adm_nav li {
@@ -97,11 +97,10 @@
     overflow:hidden;
 }
 #adm_nav li a {
-
     border: 2px inset #9e9e9e;
     color: #E3E3E3;
-    padding: 4px;
-    font-size: 0.8em;
+    padding: 8px;
+    font-size: 0.9em;
     text-decoration: none;
     background-color: #232323;
     margin-right: 1px;
@@ -245,6 +244,7 @@
     padding: 5px;
 }
 #news_info {
+    clear:both;
     overflow:hidden;
     border:0px solid red;
 }
@@ -689,4 +689,17 @@ code {
     right: 20px;
     display: block;
     background: rgba(0, 0, 0, 0.7) url('/plugins/News/tpl/img/goBottom.png') 50% 50% no-repeat;     
+}
+.other_langs {
+    float:left;
+}
+.other_langs a {
+    color: black;
+    padding: 4px;
+    text-decoration: none; 
+    border: 2px solid #1f6ba5;
+
+}
+#author_details {    
+    margin-left: 70px;
 }
