--- a/plugins/NewsSearch/tpl/css/NewsSearch.css
+++ b/plugins/NewsSearch/tpl/css/NewsSearch.css
@@ -1,6 +1,12 @@
-/*
- Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)
-*/
+/**
+ *  SimpleFrontend css mobile file
+ * 
+ *  @author diego@envigo.net
+ *  @package ProjectBase
+ *  @subpackage SimpleFrontend
+ *  @copyright Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net) 
+ */
+
 #searchResult h2 {
     color: #C0BAB6;
 }
