--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -1,6 +1,12 @@
-/*
- Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)
-*/
+/**
+ *  SimpleFrontend basic css 
+ * 
+ *  @author diego@envigo.net
+ *  @package ProjectBase
+ *  @subpackage SimpleFrontend
+ *  @copyright Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net) 
+ */
+
 html, body {
     position:relative;
     margin:0;
@@ -42,7 +48,7 @@ html, body {
     margin:0 auto;
 }
 #header{
-    overflow:hidden;
+    /* overflow:hidden; */
     margin-top: 4px;
 }
 #footer {
@@ -56,6 +62,7 @@ html, body {
     background-color:#eee;
     border-left: 1px solid #000;
     border-right: 1px solid #000;
+    overflow: hidden;
 }
 #brand {
     padding-left: 30px;
@@ -99,10 +106,13 @@ h1,h2,h3,h4,h5,h6{
     font-style:normal;
     line-height:normal;
 }
-#header-menu{
+#header-menu {
     display:block;
     background-color:#eee;
-    overflow:hidden;
+    /* overflow:hidden; */
+    border:1px solid blue !important;
+    height: 50px;
+    line-height: 50px;
     color: #870505;
     border: 1px solid #000;
     border-top-left-radius: 15px;
@@ -113,53 +123,68 @@ h1,h2,h3,h4,h5,h6{
     padding:0;
     list-style:none;
 }
-#header-menu li{
-    display:inline;
-    text-transform:uppercase;
+#header-menu select {
+    -moz-appearance: none; 
+    -webkit-appearance: none;
+    /* appearance: none;*/
+    border: 0px solid red; 
+    padding-top:13px;
+    padding-bottom:15px;
+    padding-left:5px;
+    padding-right: 5px;
+    font-size: 1em;
+    /* margin: 0; */
+    border-radius:3px;
+    background: transparent;
+    color: inherit;
+    cursor:pointer;
+    /* margin-top: 2px; */
+    overflow: hidden;
+    text-transform: uppercase;
 }
-#header-menu li a{
-    display: inline-block;
+#header-menu select:hover {background-color: #000;}
+#header-menu img {
+    width:25px;
+    height:25px;
+    vertical-align: middle;
+}
+.header-menu-link {
+    display:inline;
     text-align: center;
     text-decoration: none;
-    padding: 4px;
+    color: #870505 !important;
     transition: .3s;
     font-size: 1em;
     border: none;
     color: inherit;
     background-color: transparent;
-    height: 20px;
+    height: inherit;
+    padding-top:16px;
+    padding-bottom:15px;
+    padding-right: 5px;
+    padding-left:5px;
+    text-transform:uppercase;
 }
-#header-menu li a:hover {background-color: #000;}
-.nav_left {
-    float:left;
+.header-menu-link:hover {
+    background-color: #000;
 }
-.nav_right {
-    float:right;
-}
-#header-menu li.last{
+.header-menu-link.last{
     margin-right:0;
 }
-#header-menu select {
-    -moz-appearance: none; 
-    -webkit-appearance: none;
-    /* appearance: none;*/
-    padding: 0 4px;
-    font-size: 1em;
-    margin: 0;
-    border-radius:3px;
-    background: transparent;
-    color: inherit;
-    border: 0px solid #888;
-    cursor:pointer;
-    margin-top: 2px;
-    overflow: hidden;
+.header-menu-left {
+    text-align: left;
+    float:left;
+    padding:0;
+    margin:0;    
 }
-#header-menu select:hover {background-color: #000;}
-#header-menu img {
-    padding-left: 10px;
-    padding-right: 10px;
-    width:20px;
-    height:20px;
+.header-menu-right {
+    text-align: right;    
+    float:right;
+    padding:0;
+    margin:0;
+}
+.header-menu-link span {
+    margin-left: 5px;
 }
 .standard_box {
     margin:auto;
@@ -197,16 +222,6 @@ h1,h2,h3,h4,h5,h6{
     text-align: center;
     font-size: 2.0em;
     line-height: 1em;
-}
-.resp-icon {
-    display: none !important;
-    text-align: center;
-    font-size: 1.2em;
-    padding-right: 4px;
-    transition: .3s;
-}
-.resp-icon:hover {
-    background-color: #000;
 }
 #main_banner {
     margin-top: 5px;
@@ -351,3 +366,85 @@ h1,h2,h3,h4,h5,h6{
     padding: 0;
     margin: 0;
 }
+
+.drop_menu_ {
+    border-radius: 0 0 4px 4px;
+    border: 1px solid black;
+    border-top: none;
+    box-shadow: none;
+    margin-top: -2px;
+    max-height: 80%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-top: 6px;
+    /* position: fixed; */
+    position: relative;
+    display:inline-block;
+    /* width: 213px; */
+    z-index: 80;
+}
+.drop_btn {    
+    color: inherit;
+    padding: 7px;
+    border: outset 1px;
+    cursor: pointer;
+    font-size: inherit;
+    margin-right: 10px;
+}
+.drop_btn_caption {
+    margin-left: 5px;
+}
+.drop_down {
+    position: relative;
+    display: inline-block;
+    line-height: 0;
+}
+.drop_content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 100;
+    text-align: left;
+}
+.drop_content a {
+    color: inherit;
+    position:relative;
+    text-decoration: none;
+    display: block;
+    box-sizing:  border-box;
+    cursor: pointer;
+    display:block;
+    padding: 10px 0px 10px 10px !important;
+}
+.drop_content a:hover {
+    background-color: #000;
+}
+.drlnkico {
+    height: 20px;
+    left: 16px;
+    /* position: absolute; */
+    top: 10px;
+    width: 20px;   
+}
+.drlnkname {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    display: inline-block;
+    vertical-align: middle;    
+}
+.nav_top {
+    display: inline;
+    margin:5px; 
+
+}
+.nav_top form {
+    display: inline;
+}
+.drop_nav_top {
+    line-height: 25px;
+}
+
