--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -25,7 +25,7 @@ html, body {
 .bodysize {
     display:block;
     margin:0 auto;
-    /* min-height: 600px; */
+    min-height: 100px; 
 }
 .fl_left{
     float:left;
