--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -652,14 +652,14 @@ blockquote {
 }
 code {
     display: block;
-    white-space: pre-wrap;
+    /* white-space: pre-wrap; */
     font-family: Courier, 'New Courier', monospace;
     font-size: 0.9em;
     background-color: #000000;
     color: green;
     border-radius: 5px;
     padding-bottom: 5px;
-    padding-left: 8px;
+    padding-left: 10px;
     margin: 1em 0;
 }
 #scrollup, #scrolldown {
