--- a/plugins/MiniEditor/tpl/css/MiniEditor.css
+++ b/plugins/MiniEditor/tpl/css/MiniEditor.css
@@ -10,3 +10,20 @@
     width: 99%;
     height: 200px;
 }
+.editorBar {
+    overflow: hidden;
+    border: 0px solid #c5c5c5;    
+    margin: 0px 0px 4px 0px; 
+}
+.editorBar button {
+    color: #666;
+    float:left;
+    border: 0px;
+    font-size: 1em;
+    background-color: transparent;
+    padding: 8px 8px 8px 8px;
+    border:1px solid #cccccc;
+}
+.editorBar button:hover {
+    color: #000;
+}
