--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -499,32 +499,6 @@
     text-align: center;
     width:60%;
 }
-.soc_facebook, .soc_google, .soc_meneame, .soc_reddit, .soc_tweeter {
-    border: 0px solid black;
-    padding: 2px 2px 2px 2px;
-    background-size: 30px 220px !important;
-    display: block;
-    width: 26px;
-    height: 25px;
-    float:left;
-    margin-right: .5%;
-}
-.soc_facebook {
-    background-position: 0px 0px !important;
-}
-.soc_google {
-    background-size: 30px 238px !important;
-    background-position: 0px -31px !important;
-}
-.soc_reddit {
-    background-position: 0px -113px !important;
-}
-.soc_meneame {
-    background-position: 0px -169px !important;
-}
-.soc_tweeter {
-    background-position: 0px -56px !important;
-}
 .block_conf{
     border:1px solid  #999999;
     margin:0 auto;
@@ -599,20 +573,6 @@
 .section_newsbox:visited {
     background-color: red;
 }
-pre {
-    color: #fff;
-    background-color: #000;
-    padding-left: 4px;
-    padding-top: 10px;
-    padding-bottom: 8px;
-    border: 1px solid gray;
-    box-shadow: 0 0 4px 2px #000;
-    border-radius: 5px;
-    word-wrap: break-word;
-    white-space: pre-wrap;
-    text-align: justify;
-    line-height:1;
-}
 ul {
     list-style-type: square;
 }
@@ -651,17 +611,45 @@ blockquote {
     box-shadow: 2px 2px 15px #ccc;
     width: 75%;
 }
+pre {    
+    background-color: #919191;    
+    padding-left: 4px;
+    padding-top: 10px;
+    padding-bottom: 8px;
+    border: 1px solid gray;
+    box-shadow: 0 0 4px 2px #000;
+    border-radius: 5px;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    text-align: justify;
+    line-height:1;
+}
 code {
     display: block;
     /* white-space: pre-wrap; */
     font-family: Courier, 'New Courier', monospace;
     font-size: 0.9em;
-    background-color: #000000;
-    color: green;
+    background-color: #919191;    
     border-radius: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
     margin: 1em 0;
+}
+.code_green {
+    color: whitesmoke;
+    background-color: #000000;
+    padding:10px;
+}
+.wb {
+    color: whitesmoke;
+    background-color: #000000;
+    padding:10px;
+}
+.term, .terminal {
+    color:green;
+    background-color: #000;
+    padding:10px;
+    line-height:0.6;
 }
 #scrollup, #scrolldown {
     position: fixed;
