--- a/plugins/StdComments/tpl/css/StdComments.css
+++ b/plugins/StdComments/tpl/css/StdComments.css
@@ -47,7 +47,7 @@
     display: block;
     border: 1px solid #0A4B48;
     font-size: 0.8em;    
-    background: #077A75;
+    background: #3fa0ea;
     padding: 5px;
     text-align: center;
     border-radius: 1px;
