--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -17,7 +17,7 @@
 }
 .submit_box label, .submit_others_label {
     font-size: 0.8em;
-    background-color: #077A75;
+    background-color: #3fa0ea;    
     width:99%;
     display: block;
     font-weight: bold;
@@ -158,7 +158,7 @@
     background-color: #ddd;
 }
 #pager li a.active {
-    background-color: #077A75;
+    background-color: #3fa0ea;
     color: white;
 }
 .breadcrumb { 
