--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -153,7 +153,7 @@ h1,h2,h3,h4,h5,h6{
     background-color: #898484;
 }
 #header-menu img {
-    width:25px;
+    /* width:25px; */
     height:25px;
     vertical-align: middle;
 }
