loading screen option, frontend express ml, css/design

--- a/plugins/Multilang/tpl/css/Multilang.css
+++ b/plugins/Multilang/tpl/css/Multilang.css
@@ -14,3 +14,8 @@
     text-align: center;
     color: #660000;
 }
+@media only screen and (max-width: 900px) {
+    #choose_lang {
+        display:none;
+    }
+}
