--- a/plugins/SimpleFrontend/tpl/css/basic-mobile.css
+++ b/plugins/SimpleFrontend/tpl/css/basic-mobile.css
@@ -43,6 +43,9 @@
     .p_center_big {
         font-size: 1.5em;
     }
+    .header-menu-link {
+        font-size: 0.8em;
+    }
 }
 @media only screen and (max-width: 400px) {
     .container {
