add webp support

--- a/plugins/SimpleFrontend/tpl/css/basic.css
+++ b/plugins/SimpleFrontend/tpl/css/basic.css
@@ -71,7 +71,7 @@ html, body {
     padding-bottom: 20px;
     line-height: 1.3em;
     background-color: #000;
-    background-image: url('/images/logo.png');
+    background-image: url('/images/logo.webp');
     background-repeat: no-repeat;
     background-position: right;  
     background-size: contain;
