--- a/plugins/NewsSearch/tpl/css/NewsSearch.css
+++ b/plugins/NewsSearch/tpl/css/NewsSearch.css
@@ -49,7 +49,7 @@
 .searchContainer button {
     float: right;
     padding: 2px 6px;  
-    margin-right: 16px;
+    /* margin-right: 16px; */
     background: #ddd;
     font-size: 17px;
     border-left: none;
