--- a/plugins/SMBasic/tpl/css/SMBasic.css
+++ b/plugins/SMBasic/tpl/css/SMBasic.css
@@ -1,6 +1,11 @@
-/*
- Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)
-*/
+/**
+ *  SMBasic main css file
+ * 
+ *  @author diego@envigo.net
+ *  @package ProjectBase
+ *  @subpackage SMBasic
+ *  @copyright Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)  
+ */
 .login_box, .register_box {
     margin:auto;
     width: 50%;
