--- a/plugins/SimpleFrontend/tpl/css/basic-mobile.css
+++ b/plugins/SimpleFrontend/tpl/css/basic-mobile.css
@@ -46,6 +46,17 @@
     .header-menu-link {
         font-size: 0.8em;
     }
+    #header {
+        margin-top: 0;
+    }
+    #header-menu {
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;        
+    }
+    .container {
+        margin-left: 0;
+        margin-right: 0;
+    }    
 }
 @media only screen and (max-width: 400px) {
     .container {
@@ -57,12 +68,5 @@
     }
     #brand span {
         font-size: 1em;
-    }
-    #header {
-        margin-top: 0;
-    }
-    #header-menu {
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;        
     }
 }
