fix perm bug, miss lang, add spoiler tag to editor

--- a/plugins/News/tpl/css/News.css
+++ b/plugins/News/tpl/css/News.css
@@ -506,7 +506,7 @@
     padding:5px;
 }
 .news_article_container {
-   /* max-width: 100%;*/
+    /* max-width: 100%;*/
     margin: 5px;
     /* min-width: 300px; */
     float:left;
@@ -724,4 +724,23 @@ code {
     display:table-cell;
     padding-left:15px;  
     vertical-align: middle;       
+}
+.spoilerbutton {
+    display: block;
+    margin: 5px 0;
+}
+.spoiler {
+    overflow: hidden;
+    background: #b5b5b5;
+}
+.spoiler>div {
+    margin: 1px;
+    overflow: hidden;
+    transition: all 1s ease;
+}
+.spoilerbutton[value="+"]+.spoiler>div {
+    max-height: 0;
+}
+.spoilerbutton[value="-"]+.spoiler>div {
+    max-height: 90px; /*use a big value here*/
 }
