--- a/plugins/StdComments/tpl/css/StdComments.css
+++ b/plugins/StdComments/tpl/css/StdComments.css
@@ -63,13 +63,13 @@
     height: 200px;
 }
 #btnSendNewComment { margin-left:50%; }
-#comm_adm_buttons {
+.comm_adm_buttons {
     margin: 3px;
 }
 .adm_btn_on_comm {
     background-color: red !important;
 }
-#comm_adm_buttons input {
+.comm_adm_buttons input {
     float:right;
     border: 2px inset #9e9e9e;
     color: #E3E3E3;
